src/test/ui/assoc-inherent.stderr
error[E0202]: associated types are not yet supported in inherent impls (see #8995)
  --> $DIR/assoc-inherent.rs:6:5
   |
LL |     type Bar = isize;
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0202`.
